Melhorando o response dos metodos get do swagger
